Fixed typo for camera icon - Update style.css

--- a/main/pp7/jackboxtalks/assets/style.css
+++ b/main/pp7/jackboxtalks/assets/style.css
@@ -24351,7 +24351,7 @@ button {
     height: 30px;
     background-color: #f07d4c;
     border-radius: 50px;
-    background-image: url(f72d0b08.svg);
+    background-image: url(other/f72d0b08.svg);
     background-position: center;
     background-size: 80%;
     background-repeat: no-repeat;
